new file:   images/me.jpg modified:   index.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
          </div>
       </div>
 
-      <div class="content">
+      <div class="presentation">
          <div class="top_content">
             <h1>About Me</h1>
          </div>
          <div class="bottom_content">
             <div class="content_image">
-               <img src="images/userpic.jpg" alt="image" id="user-icon"/>
+               <img src="images/me.jpg" alt="it's just me being extremely sexy with heart-shaped sunglasses" id="user-icon"/>
             </div>
             <div class="content_bio">
 
 <code><span style="color: #33f456">user@site</span>:<span style="color: #f943d2">~</span> show_resume
 
-Hello, I'm Omelette Bio, a student at University Cote d'Azur
-I enjoy practicing code on a daily basis, I made some fun things like a discord chat bot, that you can see <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">here</a>.
+Hello, I'm Omelette Bio, a student at University Cote d'Azur, in France.
+I'm currently in my second year of a bachelor's degree in computer science.
+
+I enjoy practicing code on a daily basis, I made some fun things like a french discord chat bot, that you can see <a href="https://github.com/omelette-bio/potit_blagueur_pouete_pouete">here</a>.
+
 I also enjoy playing video games and reading mangas, you can see my collection <a href="https://www.nautiljon.com/membre/profil,franfran_sama.html">here</a>.
 Here is my <a href="https://github.com/omelette-bio">github</a> profile, where you can see my projects.
+
 My contact email is <a href="mailto:omelettebio@proton.me">omelettebio@proton.me</a>
 
 <span style="color: #33f456">user@site</span>:<span style="color: #f943d2">~</span></code>
@@ -42,5 +46,7 @@ My contact email is <a href="mailto:omelettebio@proton.me">omelettebio@proton.me
          </div>
          
       </div>
+
+
    </body>
 </html>
