modified:   index.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@ My contact email is <a href="mailto:omelettebio@proton.me">omelettebio@proton.me
          
       </div>
 
+      <div class="languages">
+         <div class="top_content">
+            <h1>Languages</h1>
+         </div>
+         <div class="bottom_content">
+            <div>
+               <h2> Backend </h2>
+               <p> Python, C </p>
+               <h2> Frontend </h2>
+               <p> HTML, CSS, Javascript </p>
+               <h2> Learning </h2>
+               <p> Java, Rust </p>
+            </div>
+         </div>
+      </div>
 
    </body>
 </html>
