new file:   images/pbpp-icon.jpg new file:   images/rsync-icon.jpg modified:   index.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -63,5 +63,22 @@ My contact email is <a href="mailto:omelettebio@proton.me">omelettebio@proton.me
          </div>
       </div>
 
+      <div class="projects">
+         <div class="top_content">
+            <h1>Projects</h1>
+         </div>
+         <div class="bottom_content line">
+            <div class="project">
+               <img src="images/rsync-icon.jpg">
+               <h3>rsync</h3>
+               <p>A mini rsync project made by using python</p>
+            </div>
+            <div class="project">
+               <img src="images/pbpp-icon.jpg">
+               <h3>potit blagueur pouete pouete</h3>
+               <p>A french discord chat bot that makes jokes</p>
+            </div>
+      </div>
+
    </body>
 </html>
