modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
          <p class="pad-l2 white-text">Hello, I'm <span>Omelette Bio</span>, a computer science student from University Côte d'Azur, Nice. <br/>
             I'm passionate by computer science, gaming, music and mangas. <br/>
             I love system programming, low-level programming but also all the capacities given by python. <br/>
+            But, I don't like web development, I don't know why, but I don't like it, maybe because it require a sense of design or art that I don't have (look at this) <br/>
          </p>
       </div>
 
