--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </div>
 
       <div class="languages">
-         <h2 class="white-text">Languages</h2>
+         <h2 class="white-text pad-down-15">Known Languages</h2>
          <div class="languages-content">
-            <div class="sub-languages pad-l2">
-               <h3 class="white-text pad-up-down-15">Programming Languages</h3>
+            <div class="sub-languages">
+               <h3 class="white-text pad-down-15">Programming Languages</h3>
                <p class="pad-l2">
                   <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" class="wd-ht-60"/> </a> 
                   <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" class="wd-ht-60"/> </a> 
@@ -41,8 +41,8 @@
                   <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" class="wd-ht-60"/> </a>
                </p>
             </div>
-            <div class="sub-languages pad-l2">
-               <h3 class="white-text pad-up-down-15">Frontend</h3>
+            <div class="sub-languages">
+               <h3 class="white-text pad-down-15">Frontend</h3>
                <p class="pad-l2">
                   <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" class="wd-ht-60" height="40"/> </a> 
                   <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" class="wd-ht-60" height="40"/> </a> 
