--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <body>
 
       <div class="title">
+         <a href="https://github.com/omelette-bio"><img class="title-github" src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/github/github-original.svg"></a>
          <img src="images/icon.jpg" class="title-background" alt="Omelette Bio">
          <div class="title-content">
             <h1>Omelette Bio</h1>
