--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;600&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;600&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
    </head>
-   <body>
+   <>
 
       <div class="title">
          <a href="https://github.com/omelette-bio"><img class="title-github" src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/github/github-original.svg"></a>
@@ -21,33 +22,37 @@
          </div>
       </div>
 
-      <div class="about-me">
-         <h2 class="white-text">About Me</h2>
-         <p class="pad-l2 white-text">Hello, I'm <span>Omelette Bio</span>, a computer science student from University Côte d'Azur, Nice. <br/>
-            I'm passionate by computer science, gaming, music and mangas. <br/>
-            I love system programming, low-level programming but also all the capacities given by python. <br/>
-            But, I don't like web development, I don't know why, but I don't like it, maybe because it require a sense of design or art that I don't have (look at this) <br/>
-         </p>
-      </div>
-
-      <div class="languages">
-         <h2 class="white-text pad-down-15">Known Languages</h2>
-         <div class="languages-content">
-            <div class="sub-languages">
-               <h3 class="white-text pad-down-15">Programming Languages</h3>
-               <p class="pad-l2">
-                  <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" class="wd-ht-60"/> </a> 
-                  <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" class="wd-ht-60"/> </a> 
-                  <a href="https://www.rust-lang.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rust/rust-plain.svg" alt="rust" class="wd-ht-60"/> </a> 
-                  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" class="wd-ht-60"/> </a>
-               </p>
+      <div class="content">
+         <div class="about-me">
+            <h2 class="white-text pad-down-15">About Me</h2>
+            <div class="neo-brut-border about-me-content">
+               <p class="pad2 white-text">Hello, I'm <span>Omelette Bio</span>, a computer science student from University Côte d'Azur, Nice. <br/>
+                  I'm passionate by computer science, gaming, music and mangas. <br/>
+                  I love system programming, low-level programming but also all the capacities given by python. <br/>
+                  But, I don't like web development, I don't know why, but I don't like it, maybe because it require a sense of design or art that I don't have (look at this) <br/>
+               </d>
             </div>
-            <div class="sub-languages">
-               <h3 class="white-text pad-down-15">Frontend</h3>
-               <p class="pad-l2">
-                  <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" class="wd-ht-60" height="40"/> </a> 
-                  <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" class="wd-ht-60" height="40"/> </a> 
-               </p>            
+         </div>
+
+         <div class="languages">
+            <h2 class="white-text pad-down-15">Known Languages</h2>
+            <div class="languages-content neo-brut-border">
+               <div class="sub-languages">
+                  <h3 class="white-text pad-down-15">Programming Languages</h3>
+                  <p class="pad-l2">
+                     <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" class="wd-ht-60"/> </a> 
+                     <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" class="wd-ht-60"/> </a> 
+                     <a href="https://www.rust-lang.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rust/rust-plain.svg" alt="rust" class="wd-ht-60"/> </a> 
+                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" class="wd-ht-60"/> </a>
+                  </p>
+               </div>
+               <div class="sub-languages">
+                  <h3 class="white-text pad-down-15">Frontend</h3>
+                  <p class="pad-l2">
+                     <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" class="wd-ht-60" height="40"/> </a> 
+                     <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" class="wd-ht-60" height="40"/> </a> 
+                  </p>            
+               </div>
             </div>
          </div>
       </div>
