modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
    </head>
 
       <div class="title">
-         <a href="https://github.com/omelette-bio"><img class="title-github" src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/github/github-original.svg"></a>
-         <img src="images/icon.jpg" class="title-background" alt="Omelette Bio">
-         <div class="title-content">
-            <h1>Omelette Bio</h1>
-            <p>Computer Science student</p>
+
+         <!-- <a href="https://github.com/omelette-bio"><img class="title-github" src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/github/github-original.svg"></a> -->
+         <div class="title-in">
+            <img src="images/icon.jpg" class="neo-brut-border" alt="Omelette Bio">
+            <div class="title-content">
+               <h1>Omelette Bio</h1>
+               <p>Computer Science student</p>
+            </div>
          </div>
       </div>
 
       <div class="content">
-         <div class="about-me poppins">
+         <div class="about-me padt0 poppins">
             <h2 class="black-text very-bold pad-down-15 space-grotesk">About Me</h2>
             <div class="neo-brut-border about-me-content">
                <p class="pad2 white-text">Hello, I'm <span>Omelette Bio</span>, a computer science student from University Côte d'Azur, Nice. <br/>
