new file:   badges/DISCORD.svg 	new file:   badges/EXERCISM.svg 	new file:   badges/FREECODECAMP.svg 	new file:   badges/GITHUB.svg 	new file:   badges/LINKEDIN.svg 	new file:   badges/PROTONMAIL.svg 	new file:   badges/Sans titre.svg 	new file:   badges/UBUNTU.svg 	new file:   badges/WINDOWS.svg 	deleted:    images/pbpp-icon.jpg 	deleted:    images/rsync-icon.jpg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,87 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
    <head>
-      <meta charset="utf-8"/>
-      <title>Home - Omelette Bio</title>
+      <meta charset="utf-8">
+      <title>Francois Flandin</title>
 
       <link rel="stylesheet" href="index.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;600&family=Poppins:wght@200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@300;500&family=JetBrains+Mono&display=swap" rel="stylesheet">
    </head>
-
-      <div class="title">
-
-         <!-- <a href="https://github.com/omelette-bio"><img class="title-github" src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/github/github-original.svg"></a> -->
-         <div class="title-in">
-            <img src="images/icon.jpg" class="neo-brut-border" alt="Omelette Bio">
-            <div class="title-content">
-               <h1>Omelette Bio</h1>
-               <p>Computer Science student</p>
+   <body>
+      <header>
+         <img class="round" src="images/icon.jpg">
+         <div>
+            <p class="sub-text" id="blue-text">// omelette bio //</p>
+            <h1>Francois Flandin</h1>
+            <p class="sub-text" id="gray-text">Étudiant en L3 info d’Université Côte d’Azur</p>
+            <div>
+               <br/>
+               <img src="badges/GITHUB.svg">
+               <img src="badges/FREECODECAMP.svg">
+               <img src="badges/EXERCISM.svg">
             </div>
          </div>
-      </div>
-
-      <div class="content">
-         <div class="about-me padt0 poppins">
-            <h2 class="black-text very-bold pad-down-15 space-grotesk">About Me</h2>
-            <div class="neo-brut-border about-me-content">
-               <p class="pad2 white-text">Hello, I'm <span>Omelette Bio</span>, a computer science student from University Côte d'Azur, Nice. <br/>
-                  I'm passionate by computer science, gaming, music and mangas. <br/>
-                  I love system programming, low-level programming but also all the capacities given by python. <br/>
-                  But, I don't like web development, I don't know why, but I don't like it, maybe because it require a sense of design or art that I don't have (look at this) <br/>
-               </d>
-            </div>
+      </header>
+      <section>
+         <div class="sub-section">
+            <h2>À propos</h2>
+            <p>
+               <br/>
+               Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis passionné par l’informatique et les nouvelles technologies. <br/>
+               Je suis particulièrement intéressé dans le développement bas niveau ainsi que l'architecture des ordinateurs, et je suis également passionné par les jeux vidéos, les mangas et écouter de la musique.
+            </p>
          </div>
-
-         <div class="languages poppins">
-            <h2 class="black-text space-grotesk">Known Languages</h2>
-            <div class="languages-content">
-               <div class="sub-languages neo-brut-border">
-                  <h4 class="black-text pad-down-15 space-grotesk">Programming Languages</h4>
-                  <p class="">
-                     <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" class="wd-ht-60"/> </a> 
-                     <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" class="wd-ht-60"/> </a> 
-                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" class="wd-ht-60"/> </a>
-                  </p>
-               </div>
-               <div class="sub-languages neo-brut-border">
-                  <h4 class="black-text pad-down-15 space-grotesk">Frontend</h4>
-                  <p class="">
-                     <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" class="wd-ht-60"/> </a> 
-                     <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" class="wd-ht-60"/> </a> 
-                  </p>            
-               </div>
-               <div class="sub-languages neo-brut-border">
-                  <h4 class="black-text pad-down-15 space-grotesk">Learning</h4>
-                  <p class="">
-                     <a href="https://www.rust-lang.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rust/rust-plain.svg" alt="rust" class="wd-ht-60"/> </a> 
-                     <a href="https://www.java.com/en/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/55609aa5bd817ff167afce0d965585c92040787a/icons/java/java-original.svg" alt="java" class="wd-ht-60"/> </a>
-                  </p>            
-               </div>
-            </div>
-         </div>
-
-         <div class="projects">
-            <h2 class="black-text space-grotesk pad-down-15">Projects</h2>
-            <div class="orange-hover">
-               <div class="sub-project neo-brut-border">
-                  <h4 class="space-grotesk">gpass2lghub</h4>
-                  <p class="poppins">A simple programm to add automatically a gamepass game to logitech ghub</p>
-               </div>
-               <div class="sub-project neo-brut-border">
-                  <h4 class="space-grotesk">potit blagueur pouete pouete</h4>
-                  <p class="poppins">A simple discord bot that makes french jokes</p>
-               </div>
-               <a href="https://github.com/omelette-bio/projet-syst2" target="_blank"><div class="sub-project neo-brut-border">
-                  <h4 class="space-grotesk">mini-rsync</h4>
-                  <p class="poppins">Mini rsync project made in python, works only on local</p>
-               </div></a>
-            </div>
-         </div>
-      </div>
+      </section>
+      <section>
+      </section>
    </body>
 </html>
