modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p class="sub-text" id="gray-text">Étudiant en L3 info d’Université Côte d’Azur</p>
             <div>
                <br/>
-               <img src="badges/GITHUB.svg">
-               <img src="badges/FREECODECAMP.svg">
-               <img src="badges/EXERCISM.svg">
+               <a href="https://github.com/omelette-bio"><img src="badges/GITHUB.svg"></a>
+               <a href="https://www.freecodecamp.org/omelette-bio"><img src="badges/FREECODECAMP.svg"></a>
+               <a href="https://exercism.org/profiles/omelette-bio"><img src="badges/EXERCISM.svg"></a>
             </div>
          </div>
       </header>
@@ -34,8 +34,10 @@
                Je suis particulièrement intéressé dans le développement bas niveau ainsi que l'architecture des ordinateurs, et je suis également passionné par les jeux vidéos, les mangas et écouter de la musique.
             </p>
          </div>
-      </section>
-      <section>
+         <div class="sub-section">
+            <h2>Compétences</h2>
+            
+         </div>
       </section>
    </body>
 </html>
