--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
             <p class="sub-text" id="gray-text">Étudiant en L3 info d’Université Côte d’Azur</p>
             <div>
                <br/>
-               <a href="https://github.com/omelette-bio"><img src="badges/GITHUB.svg"></a>
-               <a href="https://www.freecodecamp.org/omelette-bio"><img src="badges/FREECODECAMP.svg"></a>
-               <a href="https://exercism.org/profiles/omelette-bio"><img src="badges/EXERCISM.svg"></a>
+               <a href="https://github.com/omelette-bio" target="_blank">
+                  <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white">
+               </a>
+               <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
+                  <img src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white">
+               </a>
+               <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
+                  <img src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white">
+               </a>
+               <a href="https://discordapp.com/users/381898390662807565" target="_blank">
+                  <img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white">
+               </a>
             </div>
          </div>
       </header>
@@ -36,7 +45,33 @@
          </div>
          <div class="sub-section">
             <h2>Compétences</h2>
-            
+            <article>
+               <h3>Frontend</h3>
+               <article>
+                  <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white">
+                  <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white">
+                  <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
+               </article>
+            </article>
+            <article>
+               <h3>Programming Languages</h3>
+               <article>
+                  <img src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white">
+                  <img src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white">
+                  <img src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white">
+                  <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white">
+                  <img src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white">
+               </article>
+            </article>
+            <article>
+               <h3>Tools</h3>
+               <article>
+                  <img src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white">
+                  <img src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white">
+                  <img src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white">
+                  <img src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white">
+               </article>
+            </article>
          </div>
       </section>
    </body>
