--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
                   <img src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white">
                </a>
-               <a href="https://discordapp.com/users/381898390662807565" target="_blank">
-                  <img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white">
+               <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/" target="_blank">
+                  <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white">
                </a>
             </div>
          </div>
