modified:   index.html

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <h2>À propos</h2>
             <p>
                <br/>
-               Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis passionné par l’informatique et les nouvelles technologies. <br/>
-               Je suis particulièrement intéressé dans le développement bas niveau ainsi que l'architecture des ordinateurs, et je suis également passionné par les jeux vidéos, les mangas et écouter de la musique.
+               Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis passionné par l’informatique et les nouvelles technologies, plus particulièrement dans le développement bas niveau ainsi que l'architecture des ordinateurs, et je suis également passionné par les jeux vidéos, les mangas et écouter de la musique.
             </p>
          </div>
          <div class="sub-section">
