modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,181 +1,196 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-   <meta charset="utf-8" />
-   <title>Francois Flandin</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Francois Flandin</title>
 
-   <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css" />
 
-   <link rel="preconnect" href="https://fonts.googleapis.com" />
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-   <link
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@700&family=Inter:wght@300;500&family=JetBrains+Mono&display=swap"
       rel="stylesheet"
-   />
-</head>
-<body>
-   <header>
+    />
+  </head>
+  <body>
+    <header>
       <img class="round" src="images/icon.jpg" />
       <div>
-      <p class="sub-text" id="blue-text">// omelette bio //</p>
-      <h1>Francois Flandin</h1>
-      <p class="sub-text" id="gray-text">
-         Étudiant en L3 info d’Université Côte d’Azur
-      </p>
-      <div>
-         <br />
-         <a href="https://github.com/omelette-bio" target="_blank">
+        <p class="sub-text" id="blue-text">// omelette bio //</p>
+        <h1>Francois Flandin</h1>
+        <p class="sub-text" id="gray-text">
+          Étudiant en L3 info d’Université Côte d’Azur
+        </p>
+        <div>
+          <br />
+          <a href="https://github.com/omelette-bio" target="_blank">
             <img
-            src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+              src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
             />
-         </a>
-         <a
+          </a>
+          <a
             href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/"
             target="_blank"
-         >
+          >
             <img
-            src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
+              src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
             />
-         </a>
-         <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
+          </a>
+          <a href="https://www.freecodecamp.org/omelette-bio" target="_blank">
             <img
-            src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
+              src="https://img.shields.io/badge/freecodecamp-27273D?style=for-the-badge&logo=freecodecamp&logoColor=white"
             />
-         </a>
-         <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
+          </a>
+          <a href="https://exercism.org/profiles/omelette-bio" target="_blank">
             <img
-            src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
+              src="https://img.shields.io/badge/Exercism-009CAB?style=for-the-badge&logo=exercism&logoColor=white"
             />
-         </a>
+          </a>
+        </div>
       </div>
-      </div>
-   </header>
-   <section>
+    </header>
+    <section>
       <div class="sub-section">
-      <h2 id="blue-text">// À propos //</h2>
-      <p>
-         <br />
-         Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis
-         passionné par l’informatique et les nouvelles technologies, plus
-         particulièrement dans le développement bas niveau ainsi que
-         l'architecture des ordinateurs, et je suis également passionné par les
-         jeux vidéos, les mangas et écouter de la musique.
-      </p>
-      </div>
-      <div class="sub-section">
-      <h2 id="blue-text">// Compétences //</h2>
-      <article>
-         <h3>> Frontend</h3>
-         <article>
-            <img
-            src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
-            />
-         </article>
-      </article>
-      <article>
-         <h3>> Programmation</h3>
-         <article>
-            <img
-            src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
-            />
-         </article>
-      </article>
-      <article>
-         <h3>> Outils</h3>
-         <article>
-            <img
-            src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white"
-            />
-            <img
-            src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"
-            />
-         </article>
-      </article>
+        <h2 id="blue-text">// À propos //</h2>
+        <p>
+          <br />
+          Étudiant en L3 informatique à l’Université Côte d’Azur. Je suis
+          passionné par l’informatique et les nouvelles technologies, plus
+          particulièrement dans le développement bas niveau ainsi que
+          l'architecture des ordinateurs, et je suis également passionné par les
+          jeux vidéos, les mangas et écouter de la musique.
+        </p>
       </div>
       <div class="sub-section">
-      <h2 id="blue-text">// Projets //</h2>
-      <article>
-         <a href="https://github.com/omelette-bio/bataille-navale">
+        <h2 id="blue-text">// Compétences //</h2>
+        <article>
+          <h3>> Frontend</h3>
+          <article>
+            <img
+              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+            />
+          </article>
+        </article>
+        <article>
+          <h3>> Programmation</h3>
+          <article>
+            <img
+              src="https://img.shields.io/badge/Python-14354C?style=for-the-badge&logo=python&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Rust-000000?style=for-the-badge&logo=rust&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/C-00599C?style=for-the-badge&logo=c&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/ocaml-%23EC6813?style=for-the-badge&logo=ocaml&logoColor=white"
+            />
+          </article>
+        </article>
+        <article>
+          <h3>> Outils</h3>
+          <article>
+            <img
+              src="https://img.shields.io/badge/Windows-0078D6?style=for-the-badge&logo=windows&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Ubuntu-E95420?style=for-the-badge&logo=ubuntu&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/NeoVim-%2357A143.svg?&style=for-the-badge&logo=neovim&logoColor=white"
+            />
+            <img
+              src="https://img.shields.io/badge/Visual_Studio_Code-0078D4?style=for-the-badge&logo=visual%20studio%20code&logoColor=white"
+            />
+          </article>
+        </article>
+      </div>
+      <div class="sub-section">
+        <h2 id="blue-text">// Projets //</h2>
+        <article>
+          <a href="https://github.com/omelette-bio/bataille-navale">
             <h3>> Bataille Navale [12.2022]</h3>
-         </a>
-         <p>
+          </a>
+          <p>
             Projet de fin de semestre de l'ue structures de données et
             programmation C.
-         </p>
-      </article>
-      <article>
-         <a href="https://github.com/omelette-bio/mrsync">
+          </p>
+        </article>
+        <article>
+          <a href="https://github.com/omelette-bio/mrsync">
             <h3>> mrsync [05.2023]</h3>
-         </a>
-         <p>
+          </a>
+          <p>
             Projet de fin de semestre de l'ue programmation système, consistant
             à faire un mini rsync, fonctionne uniquement en local
-         </p>
-      </article>
-      <article>
-         <a href="https://github.com/omelette-bio/projet-concept-ia">
+          </p>
+        </article>
+        <article>
+          <a href="https://github.com/omelette-bio/projet-concept-ia">
             <h3>> Concepts IA [05.2023]</h3>
-         </a>
-         <p>
+          </a>
+          <p>
             Projet de fin de semestre de l'ue concepts de l'intelligence
-            artificielle, consistant à faire un programme créant des graphes de résolution de problèmes
-         </p>
-         </article>
-         <article>
-            <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
-               <h3>> RPG textuel [09.2023]</h3>
-            </a>
-            <p>
-               Premier projet de l'ue programmation orientée objet, consistant à faire un petit rpg simple en java, afin de se familiariser avec la programmation orientée objet.
-            </p>
-         </article>
-         <article>
-            <h3>> Convertisseur Midi -> wav [10.2023]</h3>
-            <p>
-               Deuxième projet de l'ue programmation orientée objet, consistant à faire un convertisseur de fichier midi en fichier wav, afin d'apprendre à utiliser des libraries externes.
-            </p>
-         </article>
+            artificielle, consistant à faire un programme créant des graphes de
+            résolution de problèmes
+          </p>
+        </article>
+        <article>
+          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
+            <h3>> RPG textuel [09.2023]</h3>
+          </a>
+          <p>
+            Premier projet de l'ue programmation orientée objet, consistant à
+            faire un petit rpg simple en java, afin de se familiariser avec la
+            programmation orientée objet.
+          </p>
+        </article>
+        <article>
+          <h3>> Convertisseur Midi -> wav [10.2023]</h3>
+          <p>
+            Deuxième projet de l'ue programmation orientée objet, consistant à
+            faire un convertisseur de fichier midi en fichier wav, afin
+            d'apprendre à utiliser des libraries externes.
+          </p>
+        </article>
       </div>
-   </section>
-   <footer>
+    </section>
+    <footer>
       <div>
-         <a href="mailto:flandinfrancois@proton.me">
-            <img src="https://img.shields.io/badge/ProtonMail-8B89CC?style=for-the-badge&logo=protonmail&logoColor=white">
-         </a>
-         <a href="https://discordapp.com/users/381898390662807565">
-            <img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white">
-         </a>
-         <a href="https://steamcommunity.com/id/omelette-bio/">
-            <img src="https://img.shields.io/badge/Steam-000000?style=for-the-badge&logo=steam&logoColor=white">
-         </a>
-         <a href="https://account.xbox.com/fr-fr/Profile?xr=mebarnav&rtc=1&csrf=bu2Mh0WOHa1C6q1XrpQX59PlfFTQY_vqbIRiiTcjBzS4c7usjZQJs_F2ZTqzUJJnhKSlv5hgt0CdBrIWIzaktxOVyFg1&wa=wsignin1.0">
-            <img src="https://img.shields.io/badge/Xbox-107C10?style=for-the-badge&logo=xbox&logoColor=white">
-         </a>
+        <a href="mailto:flandinfrancois@proton.me">
+          <img
+            src="https://img.shields.io/badge/ProtonMail-8B89CC?style=for-the-badge&logo=protonmail&logoColor=white"
+          />
+        </a>
+        <a href="https://discordapp.com/users/381898390662807565">
+          <img
+            src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white"
+          />
+        </a>
+        <a href="https://steamcommunity.com/id/omelette-bio/">
+          <img
+            src="https://img.shields.io/badge/Steam-000000?style=for-the-badge&logo=steam&logoColor=white"
+          />
+        </a>
+        <a
+          href="https://account.xbox.com/fr-fr/Profile?xr=mebarnav&rtc=1&csrf=bu2Mh0WOHa1C6q1XrpQX59PlfFTQY_vqbIRiiTcjBzS4c7usjZQJs_F2ZTqzUJJnhKSlv5hgt0CdBrIWIzaktxOVyFg1&wa=wsignin1.0"
+        >
+          <img
+            src="https://img.shields.io/badge/Xbox-107C10?style=for-the-badge&logo=xbox&logoColor=white"
+          />
+        </a>
       </div>
-   </footer>
-</body>
+    </footer>
+  </body>
 </html>
